--- a/SCApp/SCApp.csproj
+++ b/SCApp/SCApp.csproj
@@ -196,6 +196,8 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Persistance\ShopDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ItemService.cs" />
+    <Compile Include="Services\ShoppingCartService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ItemListViewModel.cs" />
     <Compile Include="ViewModels\ItemDetailViewModel.cs" />
